--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
     background-color: #f2f2f2;
 }
 
+::selection { /* Code for Firefox */
+    background: red;
+    color: #f2f2f2;
+  }
+
 * {
     margin: 0;
     padding: 0;
@@ -128,7 +133,8 @@ main {
     color: #1e1e1e;
     font-family: "Readex Pro", sans-serif;
     font-size: 15px;
-    padding: 40px 20px;
+    padding: 20px;
+    border-radius: 5px;
     cursor: pointer;
 }
 
@@ -151,9 +157,10 @@ main {
 }
 
 .socials > a > h4 {
-    padding: 20px;
     border: 1px solid #1e1e1e;
     font-weight: 400;
+    padding: 20px;
+    border-radius: 5px;
 }
 
 .socials > a:active {
@@ -165,11 +172,13 @@ main {
     margin-top: 100px;
 }
 
-#work-section h1 {
+#work-section h1,
+#contact-section h1 {
     font-size: 5rem;
     font-weight: normal;
     text-align: center;
     margin-bottom: 100px;
+    color: #1e1e1e;
 }
 
 .work-container {
@@ -177,7 +186,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 100px;
 }
 
 .text-and-button-part {
@@ -196,6 +205,10 @@ main {
     grid-area: work-part;
 }
 
+.text-and-button-part {
+    margin-bottom: 50px;
+}
+
 .text-and-button-part h3 {
     font-size: 2rem;
     font-weight: 400;
@@ -204,12 +217,14 @@ main {
 .text-and-button-part p {
     max-width: 400px;
     font-weight: 300;
+    text-align: center;
 }
 
 .see-more-work-btn {
     width: fit-content;
     border: none;
-    padding: 40px 20px;
+    padding: 20px;
+    border-radius: 5px;
     color: #1e1e1e;
     background-color: red;
     font-family: "Readex Pro", sans-serif;
@@ -230,6 +245,7 @@ main {
     border-radius: 20px;
     background-size: cover !important;
     background-position: center !important;
+    position: relative;
 }
 
 #first-img-digital-art-svs {
@@ -256,6 +272,24 @@ main {
     justify-content: center;
 }
 
+.work-show-card p {
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    top: 50%;
+    left: -10%;
+    color: red;
+    transform: translate(-50%, -50%);
+    word-break: break-all;
+    width: 1%;
+    line-height: 2rem;
+}
+
+#latest-work-p-dm {
+    position: absolute;
+    left: 105%;
+}
+
 @media (min-width:1000px) {
     .front-end-dev-work,
     .digital-marketing-work,
@@ -270,4 +304,220 @@ main {
         "work-part tab-for-dm"
         ". .";
     }
+}
+
+/*contact-section*/
+
+#contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.contact-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: #1e1e1e;
+    border-radius: 20px;
+}
+
+.first-part-contact-container {
+    background: url("images/contact-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1.5;
+    border-radius: 20px 20px 0 0;
+    width: 300px;
+    position: relative;
+}
+
+.first-part-contact-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35));
+    border-radius: 20px 20px 0 0;
+}
+
+@media (min-width:734px) {
+    .first-part-contact-container::before {
+        border-radius: 20px 0 0 20px;
+    }
+
+    .first-part-contact-container {
+        border-radius: 20px 0 0 20px;
+    }
+}
+
+.first-part-contact-container h3 {
+    font-size: 3rem;
+    color: #f2f2f2;
+    text-align: right;
+    position: relative;
+    text-transform: uppercase;
+    border-right: 2px solid red;
+    padding-right: 10px;
+    font-weight: 400;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+
+.first-part-contact-container p {
+    color: #f2f2f2;
+    font-weight: 200;
+    z-index: 9;
+    width: 300px;
+    padding-right: 10px;
+    font-size: .85rem;
+    text-align: right;
+    border-right: 2px solid red;
+    padding-right: 15px;
+    margin-right: 22px;
+    margin-bottom: 100px;
+}
+
+#contact-form {
+    margin: 30px;
+    width: 300px;
+    align-self: center;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;    
+    align-items: center;
+    flex: 1.5;
+}
+
+.form-input {
+    width: 350px;
+    margin-bottom: 10px;
+    padding: 8px;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 2px solid rgba(255, 0, 0, .5);
+    border-radius: 5px;
+    font-family: "Readex Pro", sans-serif;
+    color: rgba(255, 255, 255, 0.5);
+    transition: .2s ease-in-out;
+    background-color: transparent;
+    outline: none;
+}
+
+.form-input:focus {
+    border-bottom: 2px solid rgba(255, 0, 0, 1);
+    color: rgba(255, 255, 255, 1);
+}
+
+.form-btn {
+    padding: 20px;
+    font-family: "Readex Pro", sans-serif;
+    font-weight: 400;
+    background-color: red;
+    color: #1e1e1e;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: fit-content;
+}
+
+/*footer section*/
+
+.footer-container {
+    width: 100%;
+    background-color: #1e1e1e;
+    border-radius: 20px 20px 0 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 75px;
+    padding-bottom: 75px;
+    gap: 10vw;
+}
+
+.first-part-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-left: 50px;
+}
+
+.site-map-links {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #f2f2f2;
+    width: fit-content;
+    padding-bottom: 15px;
+}
+
+.site-map-links a {
+    text-decoration: none;
+    color: rgb(242, 242, 242, .5);
+    text-transform: uppercase;
+    transition: .2s ease-in-out;
+    padding-bottom: 5px;
+    width: fit-content;
+}
+
+.legal-links {
+    display: flex;
+    gap: 10px;
+    border-bottom: 1px solid #f2f2f2;
+    padding-bottom: 15px;
+    width: fit-content;
+}
+
+.legal-links a {
+    color: rgb(242, 242, 242, .5);
+    text-decoration: none;
+    font-weight: 200;
+    transition: .2s ease-in-out;
+}
+
+.legal-links a:hover,
+.site-map-links a:hover {
+    color: rgb(242, 242, 242, 1);
+}
+
+.subscribe-to-newsletter {
+    color: #f2f2f2;
+    font-weight: 200;
+}
+
+.second-part-footer img {
+    width: 150px;
+}
+
+.second-part-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#to-top-btn {
+    background-color: red;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
+    font-family: "Readex Pro", sans-serif;
+    margin-top: 50px;
+}
+
+#to-top-btn:active
+#form-btn {
+    background-color: #f2f2f2;
 }
