--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ main {
 .lets-work-btn {
     border: none;
     background-color: red;
-    color: #1e1e1e;
+    color: #f2f2f2;
     font-family: "Readex Pro", sans-serif;
     font-size: 15px;
     padding: 20px;
