--- a/style.css
+++ b/style.css
@@ -507,6 +507,10 @@ main {
     align-items: center;
 }
 
+.second-part-footer a {
+    margin-top: 50px;
+}
+
 #to-top-btn {
     background-color: red;
     color: #f2f2f2;
@@ -515,7 +519,6 @@ main {
     border-radius: 5px;
     padding: 20px;
     font-family: "Readex Pro", sans-serif;
-    margin-top: 50px;
     cursor: pointer;
 }
 
