--- a/style.css
+++ b/style.css
@@ -640,3 +640,76 @@ main {
   #category > option:hover {
     cursor: pointer;
   }
+
+/*cookies*/
+
+.cookie-alert {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #f2f2f2;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.cookie-alert p {
+    margin: 0;
+    font-weight: 300;
+}
+
+.cookie-alert button {
+    font-family: 'Readex Pro', sans-serif;
+    background-color: red;
+    color: #1e1e1e;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.cookie-alert button:hover {
+    color: #f2f2f2;
+}
+
+.cookie-alert button:active {
+    background-color: #1e1e1e;
+}
+
+/* to top BUTTON */
+
+#scrollTopButton {
+    display: none;
+    position: fixed;
+    bottom: 5%;
+    right: 10%;
+    padding: 10px 20px;
+    background-color: red;
+    color: #1e1e1e;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+    font-family: 'Readex Pro', sans-serif;
+  }
+
+  #scrollTopButton:hover {
+    color: #f2f2f2;
+  }
+
+  #scrollTopButton:active {
+    background-color: #1e1e1e;
+  }
+  
+  #scrollTopButton.show {
+    display: block;
+    opacity: 1;
+  }
+  
