--- a/digital-marketing.css
+++ b/digital-marketing.css
@@ -1,423 +1,1 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: "Readex Pro", sans-serif;
-    background-color: #f2f2f2;
-}
-
-::selection { /* Code for Firefox */
-    background: red;
-    color: #f2f2f2;
-  }
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-#top-of-website {
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 75px;
-    width: 100%;
-    left: 0;
-    top: 0;
-    z-index: 1;
-}
-
-header img {
-    width: 100px;
-}
-
-main {
-    width: 90%;
-    background-size: cover;
-    background-position-x: center;
-    background-position-y: 75px;
-    background-repeat: no-repeat;
-    position: relative;
-    margin: 0 auto;
-}
-
-/*hero-section*/
-
-#hero-section {
-    height: 150px;
-    z-index: 999;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.navigation-menu {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5vw;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    list-style: none;
-}
-
-.navigation-menu a {
-    text-decoration: none;
-    color: #1e1e1e;
-    font-weight: 400;
-    position: relative;
-}
-
-.navigation-menu a::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0;
-    height: 2px;
-    background-color: red;
-    transition: width .3s ease-in-out;
-}
-
-.navigation-menu a:hover::before {
-    width: 100%;
-}
-
-.navigation-menu a::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #1e1e1e;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-}
-
-.navigation-menu:not(:hover)::after{
-    opacity: 1;
-}
-
-
-#project-panel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-}
-
-.project-container {
-    position: relative; 
-    width: 350px;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    overflow: hidden;
-    border-radius: 20px;
-}
-
-.project-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-    position: relative;
-    transition: .3s ease;
-    filter: grayscale(100%);
-}
-
-.project-container:hover img {
-    filter: grayscale(0%);
-    transform: scale(1.05);
-}
-
-.project-container::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, .8), rgba(0, 0, 0, 0.1));
-    border-radius: 20px 20px 0 0;
-}
-
-.project-name {
-    position: absolute;
-    top: 15%;
-    left: 5%;
-    color: #f2f2f2;
-    font-weight: 400;
-    padding: 0 10px;
-    text-align: left; 
-    text-transform: uppercase;
-    border-left: 1px solid red;  
-    font-size: 1.85rem;
-    z-index: 9;
-}
-
-.project-description-text {
-    position: absolute;
-    top: 50%;
-    left: 5%;
-    width: calc(50% - 5px);
-    color: #f2f2f2;
-    font-weight: 300;
-    border-left: 1px solid red;  
-    padding: 0 10px;
-    text-align: left; 
-    z-index: 9;
-    font-size: .85rem;
-}
-
-.view-project-btn {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    margin-top: 10px;
-    transform: translateX(-50%);
-    width: fit-content;
-    border: none;
-    padding: 20px;
-    border-radius: 5px;
-    color: #1e1e1e;
-    background-color: red;
-    font-family: "Readex Pro", sans-serif;
-    text-decoration: none;
-    font-size: 15px;
-    cursor: pointer;
-    z-index: 9;
-}
-
-.view-project-btn:hover {
-    color: #f2f2f2;
-}
-
-.view-project-btn:active {
-    background-color: #1e1e1e;
-}
-
-/*footer section*/
-
-.form-input {
-    width: 350px;
-    margin-bottom: 10px;
-    padding: 8px;
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 2px solid rgba(255, 0, 0, .5);
-    border-radius: 5px;
-    font-family: "Readex Pro", sans-serif;
-    color: rgba(255, 255, 255, 0.5);
-    transition: .2s ease-in-out;
-    background-color: transparent;
-    outline: none;
-}
-
-.form-input:focus {
-    border-bottom: 2px solid rgba(255, 0, 0, 1);
-    color: rgba(255, 255, 255, 1);
-}
-
-.form-btn {
-    padding: 20px;
-    font-family: "Readex Pro", sans-serif;
-    font-weight: 400;
-    background-color: red;
-    color: #1e1e1e;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: fit-content;
-}
-
-#footer-container {
-    width: 100%;
-    margin-top: 100px;
-    background-color: #1e1e1e;
-    border-radius: 20px 20px 0 0;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-    padding-top: 75px;
-    padding-bottom: 75px;
-    gap: 10vw;
-}
-
-.first-part-footer {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    margin-left: 50px;
-}
-
-.site-map-links {
-    display: flex;
-    flex-direction: column;
-    border-bottom: 1px solid #f2f2f2;
-    width: fit-content;
-    padding-bottom: 15px;
-}
-
-.site-map-links a {
-    text-decoration: none;
-    color: rgb(242, 242, 242, .5);
-    text-transform: uppercase;
-    transition: .2s ease-in-out;
-    padding-bottom: 5px;
-    width: fit-content;
-}
-
-.legal-links {
-    display: flex;
-    gap: 10px;
-    border-bottom: 1px solid #f2f2f2;
-    padding-bottom: 15px;
-    width: fit-content;
-}
-
-.legal-links a {
-    color: rgb(242, 242, 242, .5);
-    text-decoration: none;
-    font-weight: 200;
-    transition: .2s ease-in-out;
-}
-
-.legal-links a:hover,
-.site-map-links a:hover {
-    color: rgb(242, 242, 242, 1);
-}
-
-.subscribe-to-newsletter p {
-    width: fit-content;
-    color: #f2f2f2;
-    font-weight: 200;
-}
-
-.second-part-footer img {
-    width: 150px;
-}
-
-.second-part-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.second-part-footer a {
-    margin-top: 50px;
-}
-
-#to-top-btn {
-    background-color: red;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    padding: 20px;
-    font-family: "Readex Pro", sans-serif;
-    cursor: pointer;
-}
-
-#to-top-btn:hover,
-.form-btn:hover,
-.see-more-work-btn:hover,
-.lets-work-btn:hover {
-    color: white;
-}
-
-#to-top-btn:active
-#form-btn:active {
-    background-color: #f2f2f2;
-}
-
-/*contact pop up*/
-#contactFormPopup {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(30, 30, 30, .8);
-    backdrop-filter: blur(15px);
-    padding: 20px;
-    z-index: 9999;
-    width: 350px;
-    border-radius: 20px;
-  }
-
-  #contactForm > input {
-    color: #1e1e1e;
-    font-family: 'Readex Pro', sans-serif;
-  }
-
-  #contactForm > input:focus,
-  #contactForm > textarea:focus {
-    border: none;
-    outline: none;
-  }
-  
-  #contactFormPopup input[type=text],
-  #contactFormPopup input[type=email],
-  #contactFormPopup textarea,
-  #contactFormPopup select {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-    resize: vertical;
-  }
-  
-  #contactFormPopup button[type=submit] {
-    background-color: red;
-    color: #1e1e1e;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: 'Readex Pro', sans-serif;
-  }
-  
-  #contactFormPopup button[type=submit]:hover {
-    color: #f2f2f2;
-  }
-
-  label {
-    color: #f2f2f2;
-  }
-  
-  .close {
-    color: #f2f2f2;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: red;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  #category {
-    color: #1e1e1e;
-    font-family: 'Readex Pro', sans-serif;
-  }
-
-  #category > option:hover {
-    cursor: pointer;
-  }
+body{margin:0;padding:0;font-family:"Readex Pro",sans-serif;background-color:#f2f2f2}::selection{background:red;color:#f2f2f2}*{margin:0;padding:0;box-sizing:border-box}html{scroll-behavior:smooth}#top-of-website{background-color:#000;display:flex;align-items:center;justify-content:center;height:75px;width:100%;left:0;top:0;z-index:1}header img{width:100px}main{width:90%;background-size:cover;background-position-x:center;background-position-y:75px;background-repeat:no-repeat;position:relative;margin:0 auto}#hero-section{height:150px;z-index:999;display:flex;flex-direction:column;justify-content:center}.navigation-menu{display:flex;flex-direction:row;flex-wrap:wrap;gap:5vw;justify-content:center;align-items:center;height:50px;list-style:none}.navigation-menu a{text-decoration:none;color:#1e1e1e;font-weight:400;position:relative}.navigation-menu a::before{content:"";position:absolute;bottom:0;left:0;width:0;height:2px;background-color:red;transition:width .3s ease-in-out}.navigation-menu a:hover::before{width:100%}.navigation-menu a::after{content:"";position:absolute;bottom:0;left:0;width:100%;height:2px;background-color:#1e1e1e;opacity:0;transition:opacity .3s ease-in-out}.navigation-menu:not(:hover)::after{opacity:1}#project-panel{display:flex;justify-content:center;align-items:center;flex-wrap:wrap;gap:20px}.project-container{position:relative;width:350px;height:350px;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;overflow:hidden;border-radius:20px}.project-container img{width:100%;height:100%;object-fit:cover;position:relative;transition:.3s ease;filter:grayscale(100%)}.project-container:hover img{filter:grayscale(0%);transform:scale(1.05)}.project-container::after{content:"";position:absolute;top:0;left:0;right:0;bottom:0;background:linear-gradient(to right,rgba(0,0,0,.8),rgba(0,0,0,.1));border-radius:20px 20px 0 0}.project-name{position:absolute;top:15%;left:5%;color:#f2f2f2;font-weight:400;padding:0 10px;text-align:left;text-transform:uppercase;border-left:1px solid red;font-size:1.85rem;z-index:9}.project-description-text{position:absolute;top:50%;left:5%;width:calc(50% - 5px);color:#f2f2f2;font-weight:300;border-left:1px solid red;padding:0 10px;text-align:left;z-index:9;font-size:.85rem}.view-project-btn{position:absolute;bottom:10px;left:50%;margin-top:10px;transform:translateX(-50%);width:fit-content;border:none;padding:20px;border-radius:5px;color:#1e1e1e;background-color:red;font-family:"Readex Pro",sans-serif;text-decoration:none;font-size:15px;cursor:pointer;z-index:9}.view-project-btn:hover{color:#f2f2f2}.view-project-btn:active{background-color:#1e1e1e}.form-input{width:350px;margin-bottom:10px;padding:8px;box-sizing:border-box;border:none;border-bottom:2px solid rgba(255,0,0,.5);border-radius:5px;font-family:"Readex Pro",sans-serif;color:rgba(255,255,255,.5);transition:.2s ease-in-out;background-color:transparent;outline:none}.form-input:focus{border-bottom:2px solid rgba(255,0,0,1);color:rgba(255,255,255,1)}.form-btn{padding:20px;font-family:"Readex Pro",sans-serif;font-weight:400;background-color:red;color:#1e1e1e;border:none;border-radius:5px;cursor:pointer;width:fit-content}#footer-container{width:100%;margin-top:100px;background-color:#1e1e1e;border-radius:20px 20px 0 0;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-around;padding-top:75px;padding-bottom:75px;gap:10vw}.first-part-footer{display:flex;flex-direction:column;gap:15px;margin-left:50px}.site-map-links{display:flex;flex-direction:column;border-bottom:1px solid #f2f2f2;width:fit-content;padding-bottom:15px}.site-map-links a{text-decoration:none;color:rgb(242,242,242,.5);text-transform:uppercase;transition:.2s ease-in-out;padding-bottom:5px;width:fit-content}.legal-links{display:flex;gap:10px;border-bottom:1px solid #f2f2f2;padding-bottom:15px;width:fit-content}.legal-links a{color:rgb(242,242,242,.5);text-decoration:none;font-weight:200;transition:.2s ease-in-out}.legal-links a:hover,.site-map-links a:hover{color:rgb(242,242,242,1)}.subscribe-to-newsletter p{width:fit-content;color:#f2f2f2;font-weight:200}.second-part-footer img{width:150px}.second-part-footer{display:flex;flex-direction:column;justify-content:center;align-items:center}.second-part-footer a{margin-top:50px}#to-top-btn{background-color:red;outline:none;border:none;border-radius:5px;padding:20px;font-family:"Readex Pro",sans-serif;cursor:pointer}#to-top-btn:hover,.form-btn:hover,.see-more-work-btn:hover,.lets-work-btn:hover{color:#fff}#to-top-btn:active #form-btn:active{background-color:#f2f2f2}#contactFormPopup{display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background-color:rgba(30,30,30,.8);backdrop-filter:blur(15px);padding:20px;z-index:9999;width:350px;border-radius:20px}#contactForm>input{color:#1e1e1e;font-family:'Readex Pro',sans-serif}#contactForm>input:focus,#contactForm>textarea:focus{border:none;outline:none}#contactFormPopup input[type=text],#contactFormPopup input[type=email],#contactFormPopup textarea,#contactFormPopup select{width:100%;padding:12px;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;margin-bottom:10px;resize:vertical}#contactFormPopup button[type=submit]{background-color:red;color:#1e1e1e;padding:12px 20px;border:none;border-radius:4px;cursor:pointer;font-family:'Readex Pro',sans-serif}#contactFormPopup button[type=submit]:hover{color:#f2f2f2}label{color:#f2f2f2}.close{color:#f2f2f2;float:right;font-size:28px;font-weight:700}.close:hover,.close:focus{color:red;text-decoration:none;cursor:pointer}#category{color:#1e1e1e;font-family:'Readex Pro',sans-serif}#category>option:hover{cursor:pointer}
